# watchdog

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
benches/: capture_benchmarks.rs
examples/: basic_capture.rs
src/: error.rs  lib.rs  types.rs
src/platform/: macos.rs  mod.rs
